// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Task: config-lint > create .eslintrc.js if not existed 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.3
[SUCCESS] Install dependencies
[STARTED] Create eslint config
[DATA] Create .eslintrc.js, extending rehearsal default eslint-related config
[SUCCESS] Create eslint config
"
`;

exports[`Task: config-lint > postLintSetup hook from user config 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.3
[SUCCESS] Install dependencies
[STARTED] Create eslint config
[DATA] Create .eslintrc.js from rehearsal config
[DATA] Run postLintSetup from rehearsal config
[SUCCESS] Create eslint config
"
`;

exports[`Task: config-lint > run custom config command with user config provided 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependencies: @types/node, @typescript-eslint/eslint-plugin, @typescript-eslint/parser, eslint, eslint-config-prettier, eslint-plugin-prettier, prettier, typescript
[DATA] Setting resolutions: typescript@^5.0.3
[SUCCESS] Install dependencies
[STARTED] Create eslint config
[DATA] Create .eslintrc.js from rehearsal config
[SUCCESS] Create eslint config
"
`;
